--- a/manifest.json
+++ b/manifest.json
@@ -16,6 +16,11 @@
       "src": "logo512.png",
       "type": "image/png",
       "sizes": "512x512"
+    },
+    {
+      "src": "profile.jpg",
+      "type": "image/jpg",
+      "sizes": "256x256"
     }
   ],
   "start_url": ".",
