--- a/package.json
+++ b/package.json
@@ -45,7 +45,10 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^6.1.1",
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "eslint": "^8.57.0",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-styled-components-a11y": "^2.1.32",
+    "gh-pages": "^6.1.1"
   }
 }
